# condash

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  electron-builder.yml  knip.json  mkdocs.yml  node_modules  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
conception-template/: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.example  _gitignore  condash.json.example  configuration.json.example
crates/condash-parser/: Cargo.toml
crates/condash-parser/src/: deliverables.rs  knowledge.rs  lib.rs  note_kind.rs  readme.rs  regexes.rs  sections.rs  tree.rs
crates/condash-parser/tools/: py_driver.py
docs/: CNAME  architecture.md  configuration.md  index.md  non-goals.md  reference.md
frontend/: dashboard.html
integrations/: README.md  osc133.bash  osc133.fish  osc133.zsh
scripts/: analyze-cpuprofile.mjs  build-cli.mjs  build-electron.mjs  perf-baseline.mjs  perf-load.d.mts  perf-load.mjs  run-playwright.mjs  snap.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assets.rs  config.rs  events.rs  lib.rs  main.rs  paths.rs  pty.rs  runner_registry.rs  runners.rs  server.rs
src-tauri/src/server/: config_surface.rs  events.rs  items.rs  mod.rs  openers.rs  shell.rs
src-tauri/tests/: configuration_yml.rs  events_routes.rs  file_mutation_routes.rs  mutation_routes.rs  runner_routes.rs  term_ws.rs
tests/: agents-effort-ux.spec.ts  boots.spec.ts  (+57 more)
(+888 files in other folders)
