[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/condash-parser",
    "crates/condash-state",
    "crates/condash-render",
    "crates/condash-mutations",
]

# Lints live at the workspace level so every member crate inherits
# them via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
