[package]
name = "condash-parser"
version = "0.1.0"
description = "Parser for conception item READMEs and the knowledge tree. Rust port of condash/src/condash/parser.py."
authors = ["Alice Voland <alice@vcoeur.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[dependencies]
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
